# DailyJokes

./: .env  .replit  Dockerfile  app.py  docker-compose.yaml  email_service.py  loadenv.sh  main.py  models.py  package-lock.json  package.json  pyproject.toml  routes.py  scheduler.py
static/css/: style.css
static/js/: main.js
templates/: admin.html  analytics.html  base.html  index.html  rate.html  unsubscribe.html
templates/email/: daily_joke.html
utils/: ai_utils.py
